--- a/pages/playInfo/playInfo.wxss
+++ b/pages/playInfo/playInfo.wxss
@@ -36,12 +36,13 @@
   width: 180vh;
 }
 .page .playLeft .title .song-type {
-  display: inline-block;
- 
+  display: flex;
+  align-items: center;
   height: 10vh;
   width: 45vh;
   background: rgba(255,255,255, 0.1);
   border-radius: 2vh;
+  margin-top: 2.5vh;
 }.page .playLeft .title .song-author {
   display: flex;
   margin-left: 10vh;
@@ -50,6 +51,7 @@
   background: rgba(255,255,255, 0.1);
   border-radius: 2vh;
   align-items: center;
+  margin-top: 2.5vh;
 }
 .page .playLeft .title .title-abumInfo {
   display: block;
@@ -197,6 +199,10 @@
   flex-shrink: 0;
 }
 
+.page .songDc .songDcTitle .song-type image {
+  margin-right: 2.7vh;
+}
+
 .page .songDc .songDcTitle .image {
   width: 23vh;
   height: 23vh;
@@ -245,9 +251,9 @@
   height: 16.5vh;
   padding: 5vh 2.42vh 5vh 5vh;
 }
-.playList .songList .view text:nth-child(1) {
+/* .playList .songList .view text:nth-child(1) {
   width: 8vh;
-}
+} */
 .playList .songList .view:last-child {
   margin-bottom: 0;
 }
@@ -326,7 +332,7 @@
   /* vertical-align: middle; */
   transform: translateX(2.5vh);
   float: left;
-  margin-right: 7.6vh;
+  margin-right: 2.6vh;
 }
 .wx-slider-handle {
   width: 10vh!important;
