--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -8,11 +8,11 @@
         style="width: {{126 * times}}px; height: {{11 * times}}px;left: {{9 * times}}px;top:{{4.3 * times}}px">
         <image src="../../images/search.png" alt=""
           style="width: {{10 * times}}px; height: {{10 * times}}px;  margin: 0 {{2 * times}}px;" />
-        <input class="input" type="text" value="{{keyWord}}" bindinput="search" data-focusindex="1" bindfocus="focus"
-          bindblur="blur" placeholder="请输入进行搜索"
-          style="width: {{105 * times}}px; height: {{11 * times}}px;  font-size: {{4.9 * times}}px;" bindtap="aa" />
+        <input class="input" type="text" value="{{keyWord}}" bindinput="search" data-focusindex="1"
+           placeholder="请输入进行搜索"
+          style="width: {{100 * times}}px; height: {{11 * times}}px;  font-size: {{4.9 * times}}px;margin-right:15px"  />
         <image wx:if="{{keyWord != ''}}" catchtap="clear" src="../../images/modal_close.png" alt=""
-          style="width: {{10 * times}}px; height: {{10 * times}}px;  margin: 0 {{2 * times}}px;" />
+          style="width: {{10 * times}}px; height: {{10 * times}}px;  margin: 0 {{4 * times}}px " />
 
       </view>
       <button class="cancel" wx:if="{{keyWord}}" bindtap="searchClick" data-focusindex="1"
