--- a/pages/like/like.wxml
+++ b/pages/like/like.wxml
@@ -13,7 +13,7 @@
       <view class="storyBox">
         <story wx:if="{{info.length>0 && req}}" wx:for="{{info}}" wx:key="index"  data-no="{{index}}"
           data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}"
-          data-contentype="{{item.contentType}}"  catchclickHadle="likeOne"  bindtap="linkAbumInfo" datasource="{{item}}"  likePic="{{likePic}}"   className="{{screen}}">
+          data-contentype="{{item.contentType}}" data-isvip="{{item.isVip}}"  catchclickHadle="likeOne"  bindtap="linkAbumInfo" datasource="{{item}}"  likePic="{{likePic}}"   className="{{screen}}">
           </story>
 
         <!-- 加载中盒子 -->
@@ -31,7 +31,7 @@
   <mini-player bindshowExisted ="showExisted" existed="{{existed}}" id="miniPlayer" songInfo="{{songInfo}}" bindcurrent="changeCurrent" bindsetPlaying="setPlaying"></mini-player>
 </view>
 
-<view wx:if="{{showModal}}" class="model" bindtap="close"></view>
+<!-- <view wx:if="{{showModal}}" class="model" bindtap="close"></view> -->
 <view wx:if="{{showModal}}" class="showInfo">
   <view class="close" bindtap="close">
     <image src="../../images/modal_close.png" />
@@ -40,4 +40,12 @@
     暂时还没有内容哦，请去收藏喜欢的故事吧
   </view>
   <button bindtap="close">确定</button>
+</view>
+<!--语音进入未登录-->
+<view wx:if="{{showNoUserModal}}" class="showInfo">
+  
+  <view class="info">
+    暂时还没有登录哦，请登录后操作
+  </view>
+  <button bindtap="goLogin">确定</button>
 </view>
