--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,7 +1,5 @@
 <view class="{{screen}} {{colorStyle}}" style="background-color: {{backgroundColor}}; height: 100vh;">
-  <scroll-view class="searchContent" scroll-y="false" scroll-x="true" scroll-left="{{scrollLeft}}"
-    lower-threshold="1920" bindscrolltolower="getLayoutData"
-    style="padding: {{0 * times}}px {{9 * times}}px; height: 100vh;overflow-y:hidden;">
+  <view class="searchContent" style="padding: {{0 * times}}px {{9 * times}}px; height: 100vh;overflow-y:hidden;">
     <view class="mianContent"
       style="width: {{126 * times}}px; height: {{11 * times}}px; border-radius: {{11 * times}}px; left: {{9 * times}}px;  top: {{4.3 * times}}px;">
       <view class="search"
@@ -19,7 +17,8 @@
         style="width: {{20 * times}}px; height: {{9.8 * times}}px;  line-height: {{9.8 * times}}px; border-radius: {{9.8 * times}}px; font-size: {{4.6 * times}}px; left: {{141 * times}}px; top: {{4.6 * times}}px;">搜索</button>
       <!-- <view wx:if="{{info.length == 0}}"  class="remindTitle">推荐搜索</view> -->
       <!-- 搜索类目 -->
-      <view class="noSearch" wx:if="{{pageState == 1}}" style="margin-top: {{16* times}}px;">
+    <scroll-view  scroll-y="false" wx:if="{{pageState == 1}}" scroll-x="true" style="overflow-y:hidden;margin-top: {{16* times}}px;position: fixed;top:{{3* times}}px; ">
+      <view class="noSearch" >
         <view wx:if="{{recentSearch.length > 0}}" class="recentSearch" style="width: {{66 * times}}px">
           <view wx:if="{{info.length == 0}}" style="font-size: {{5 * times}}px; margin-top:{{4* times}}px;margin-bottom: {{6 * times}}px"
             class="remindTitle">
@@ -49,11 +48,12 @@
           </view>
         </view>
       </view>
+      </scroll-view>
       <!-- 页面盒子 -->
     </view>
 
     <view class="label-view" wx:if="{{info.length>0}}"
-      style=" margin-top:{{8* times}}px; left: 13vh;   font-size: {{4 * times}}px; ">
+      style="top:{{18* times}}px; left:{{9* times}}px;  position: fixed;  font-size: {{4 * times}}px; ">
       <view class="title{{index === currentTap ? ' active-tap' : ''}}" wx:for="{{labels}}" data-focusindex="2"
         wx:key="index" data-index="{{index}}" bindtap="selectTap"
         style="margin-right: {{5 * times}}px; padding: {{1.2 * times}}px {{5.1 * times}}px; border-radius: {{5.5 * times}}px;background:{{index === currentTap ? mainColor : 'rgba(255,255,255, 0.1)'}};color:{{index === currentTap ? '#000' : '#bebebe'}}">
@@ -63,23 +63,23 @@
 
 
     <!-- 页面数据 -->
-    <view style="margin-top:{{4* times}}px;overflow-y:hidden" class="dataView">
+    <scroll-view class="dataView" scroll-y="false" scroll-x="true" scroll-left="{{scrollLeft}}"
+    lower-threshold="1920" bindscrolltolower="getLayoutData"
+    style="overflow-y:hidden;  position: fixed;top:{{30* times}}px; ">
+    <view style=" overflow-y:hidden" >
       <view wx:if="{{pageState == 2}}" wx:for="{{info}}" wx:key="index" data-id="{{item.id}}"
         data-title="{{item.title}}" data-src="{{item.coverImgUrl}}" data-contentype="{{item.contentType}}"
         bindtap="linkAbumInfo" class="{{screen}}albumCard" data-disablefocus="true"
-        style="width: {{33.7 * times}}px; overflow-y:hidden; ">
+        style="width: {{33.7 * times}}px;margin-right:{{4 * times}}px; overflow-y:hidden; ">
         <image class="image" src="{{item.coverImgUrl}}" data-focusindex="5"
-          style="width: {{33.7 * times}}px; height: {{33.7 * times}}px; border-radius: {{2 * times}}px;">
-          </image>
-
+          style="width: {{33.7 * times}}px; height: {{33.7 * times}}px; border-radius: {{2 * times}}px;"></image>
         <view class="albumTit" style=" margin-top: {{1 * times}}px; font-size: {{5.2 * times}}px;">
-          <text class="vip" wx:if="{{item.isVip}}" style="background-color:{{mainColor}}">VIP</text>
           <text>{{ item.title }}</text>
         </view>
       </view>
-
     </view>
-  </scroll-view>
+    </scroll-view>
+  </view>
   <view class="miniView" style="top: {{100 * times}}px">
     <mini-player id="miniPlayer" songInfo="{{songInfo}}"></mini-player>
   </view>
