--- a/pages/category/category-horizontal.wxss
+++ b/pages/category/category-horizontal.wxss
@@ -148,17 +148,9 @@
   border-bottom: 2px solid #dc5e4e;
 }  */
 
-/* .cateitem[focus-select=true]{
-  content:"";
-  position:absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 2vh;
-  vertical-align: bottom;
-  box-shadow: inset 4px 4px #ffac2d, inset -4px -4px #ffac2d;
- 
-
-} */
+.cateitem[focus-select=true]{
+  border: 2px solid #dc5e4e;
+}
 
 
 
