--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -35,7 +35,7 @@
       <!-- 页面盒子 -->
       <view style="margin-top:0vh" class="storyBox">
         <categoryItem class="cateitem"  wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
-        data-id="{{item.id}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" bindtap="linkAbumInfo"
+        data-id="{{item.id}}" data-focusindex='2' data-title="{{item.allTitle}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" bindtap="linkAbumInfo"
         datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}" data-disablefocus="true"></categoryItem>
       </view>
       
@@ -50,5 +50,5 @@
   </scroll-view>
 
   <bgConfirm id="bgConfirm" msg="{{confirm}}" confirm="确定" cancel=""></bgConfirm>
-  <mini-player id="miniPlayer" songInfo="{{songInfo}}"></mini-player>
+  <mini-player  focusIndex="{{focusIndex}}" id="miniPlayer" songInfo="{{songInfo}}"></mini-player>
 </view>
